--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,8 @@ I am a [postdoctoral research fellow](https://connects.catalyst.harvard.edu/Prof
 
 ## Key Publications and Preprints
 
++ Check out our new preprint on [graphical modeling of multi-study data](https://arxiv.org/abs/2210.12837){target="_blank"}! Our method builds on the [multi-study factor analysis (MSFA) method ](https://doi.org/10.1111/biom.12974){target="_blank"} of [Roberta De Vito](https://rdevito.github.io/web/){target="_blank"} and her colleagues. We use latent variables to estimate shared and condition-specific Gaussian graphical models. Citation: **Shutta, K.H.**, Scholtens, D.M., Lowe Jr., W.L., Balasubramanian, R., and De Vito, R., **2022** 
+*arXiv,* https://doi.org/10.48550/arXiv.2210.12837
 + [DRAGON](https://arxiv.org/abs/2104.01690){target="_blank"} is a new tool for multi-omic Gaussian graphical modeling. DRAGON lives in the [Network Zoo](https://netzoo.github.io/){target="_blank"} and is available as part of [netZooPy](https://netzoopy.readthedocs.io/en/latest/){target="_blank"}. Citation: **Shutta, K.H.**^+^, Weighill, D.^+^, Burkholz, R., Guebila, M.B., Zacharias, H.U., Quackenbush, J. and Altenbuchinger, M., **2022**. DRAGON: determining regulatory associations using graphical models on multi-omic networks. *arXiv,* https://doi.org/10.48550/arXiv.2104.01690. ^+^: equal contribution
 
 + Our recent [tutorial](https://onlinelibrary.wiley.com/doi/10.1002/sim.9546){target="_blank"} on Gaussian graphical models is a great starting point for applied statisticians to get up and running with GGM analyses. You can find a stand-alone RMarkdown document with the tutorial code [here](https://github.com/katehoffshutta/ggmTutorial){target="_blank"}. Citation: **Shutta, K.H.**, De Vito, R., Scholtens, D.M. and Balasubramanian, R., **2022**. Gaussian graphical models with applications to omics analyses. *Statistics in medicine.* https://doi.org/10.1002/sim.9546
