--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,15 @@ I am a [postdoctoral research fellow](https://connects.catalyst.harvard.edu/Prof
 
 ## Key Publications and Preprints
 
++ I'm proud to have contributed to two recent publications that use metabolomics to understand the relationship between mental health and cardiometabolic health! This work was supported by the NIH NIA (award number [R01-AG051600](https://reporter.nih.gov/search/6QSl7r5uPU6hV3i_mMNLCw/projects?shared=true){target="_blank"}).
+    + [*Mental health and incident cardiovascular disease*](https://doi.org/10.1016/j.bbi.2023.08.010){target="_blank"} Balasubramanian, R., **Shutta, K. H.**, Guasch-Ferre, M., Huang, T., Jha, S. C., Zhu, Y., ... Hankinson, S.E., & Kubzansky, L. D. (**2023**). Metabolomic profiles of chronic distress are associated with cardiovascular disease risk and inflammation-related risk factors. Brain, Behavior, and Immunity, 114, 262-274. https://doi.org/10.1016/j.bbi.2023.08.010
+    + [*Mental health and diabetes risk*](https://doi.org/10.1210/clinem/dgad731){target="_blank"} Huang, T., Zhu, Y., **Shutta, K. H.**, Balasubramanian, R., Zeleznik, O. A., Rexrode, K. M., ... Kubzansky, L.D., & Hankinson, S. E. (**2023**). A Plasma Metabolite Score Related to Psychological Distress and Diabetes Risk: A Nested Case-control Study in US Women. The Journal of Clinical Endocrinology & Metabolism, dgad731. https://doi.org/10.1210/clinem/dgad731
+
+\newline
+
++ SpiderLearner was recently published in Statistics in Medicine! 
+Our [SpiderLearner Quickstart Guide](https://katehoffshutta.github.io/web/SpiderLearner/SpiderLearnerQuickStart.html){target="_blank"} will get you up and running with the corresponding R package `ensembleGGM` in just a few minutes. We are always looking for feedback via the [`ensembleGGM` Github repository](https://github.com/katehoffshutta/ensembleGGM){target="_blank"}! Citation: **Shutta, K. H.**, Balzer, L. B., Scholtens, D. M., & Balasubramanian, R. (**2023**). SpiderLearner: An ensemble approach to Gaussian graphical model estimation. Statistics in Medicine, 42(13), 2116-2133. https://doi.org/10.1002/sim.9714
+
 + Check out our new preprint on [graphical modeling of multi-study data](https://arxiv.org/abs/2210.12837){target="_blank"}! Our method builds on the [multi-study factor analysis (MSFA) method ](https://doi.org/10.1111/biom.12974){target="_blank"} of [Roberta De Vito](https://rdevito.github.io/web/){target="_blank"} and her colleagues. We use latent variables to estimate shared and condition-specific Gaussian graphical models. Citation: **Shutta, K.H.**, Scholtens, D.M., Lowe Jr., W.L., Balasubramanian, R., and De Vito, R., **2022** 
 *arXiv,* https://doi.org/10.48550/arXiv.2210.12837
 + [DRAGON](https://arxiv.org/abs/2104.01690){target="_blank"} is a new tool for multi-omic Gaussian graphical modeling. DRAGON lives in the [Network Zoo](https://netzoo.github.io/){target="_blank"} and is available as part of [netZooPy](https://netzoopy.readthedocs.io/en/latest/){target="_blank"}. Citation: **Shutta, K.H.**^+^, Weighill, D.^+^, Burkholz, R., Guebila, M.B., Zacharias, H.U., Quackenbush, J. and Altenbuchinger, M., **2022**. DRAGON: determining regulatory associations using graphical models on multi-omic networks. *arXiv,* https://doi.org/10.48550/arXiv.2104.01690. ^+^: equal contribution
